Clean up and slim down changes to bwc tests
Signed-off-by: Peter Nied <peternied@hotmail.com>